<resources>
    <string name="app_name">DuckHunt</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ayuda">Ayuda</string>
    <string name="iniciar">Iniciar Juego</string>
    <string name="hinttunombre">Escribe tu nombre</string>
    <string name="txtlogo">Logo Juego</string>
    <string name="txtranking">Ranking</string>
    <string name="recuerda">Recordar Nombre</string>
    <string name="txtajustes">Ajustes</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="buttonEnviar">buttonEnviar</string>
    <string name="title_activity_contacta">Contacta</string>
    <string name="txtEnviar">Enviar</string>
</resources>