<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_game"
    android:padding="16dp"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/txtlogo"
        android:src="@drawable/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hinttunombre"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/iniciar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextNick"
        app:layout_constraintStart_toStartOf="@+id/editTextNick"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRecuerda" />

    <Button
        android:id="@+id/buttonAyuda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ayuda"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/buttonStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonStart"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

    <Button
        android:id="@+id/buttonRanking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/txtranking"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/buttonAjustes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonAjustes"
        app:layout_constraintTop_toBottomOf="@+id/buttonAjustes" />

    <Button
        android:id="@+id/buttonAjustes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/txtajustes"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/buttonAyuda"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonAyuda"
        app:layout_constraintTop_toBottomOf="@+id/buttonAyuda" />

    <CheckBox
        android:id="@+id/checkBoxRecuerda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pixel"
        android:text="@string/recuerda"
        app:layout_constraintStart_toStartOf="@+id/editTextNick"
        app:layout_constraintTop_toBottomOf="@+id/editTextNick" />

</androidx.constraintlayout.widget.ConstraintLayout>
